just package java instead